grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: grafana
spec:
  selector:
    app: grafana
  ports:
  - name: http
    port: 80
    targetPort: http
  type: ClusterIP
